Début de personalisation
Signed-off-by: Emmanuel COUTRIS <emmanuel.coutris@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-time-machine
+title: Instant Thé
+description: L'instant pour discuter du thé
+show_downloads: false
+github:
+    is_project_page: false
